# perp-sim

./: .gitignore  Cargo.toml  PERP_FUTURES_ISSUES.md  PYTH_API.md  README.md
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.css  App.tsx  index.css  types.ts
logs/: oracle.csv  orders.csv
perp-exchange/: Cargo.toml
perp-exchange/src/: lib.rs
sim-engine/: Cargo.toml  build.rs  websocket_client_example.js
sim-engine/logs/: executions.csv  liquidations.csv  markets.csv  oracle.csv  orders.csv  positions.csv
sim-engine/src/: events.rs  kernel.rs  latency.rs  logging.rs  main.rs  messages.rs  pending_orders.rs  sim_engine.rs  trigger_checker.rs
sim-engine/src/agents/: exchange_agent.rs  human_agent.rs  keeper_agent.rs  limit_trader_agent.rs  liquidation_agent.rs  market_maker_agent.rs  mod.rs  oracle_agent.rs  smart_trader_agent.rs  trader_agent.rs
sim-engine/src/api/: cache.rs  mod.rs  provider.rs  pyth.rs  server.rs  ws.rs
sim-engine/src/scenarios/: balanced_market.json  keeper_competition_test.json  limit_orders_test.json  mod.rs  multi_agent.json  simple_demo.json  simple_demo.rs  test_strategies.json
sim-engine/src/vara/: client.rs  codec.rs  keystore.rs  mod.rs  types.rs  vara_perps.idl
