[package]
name = "sim-engine"
version = "0.1.0"
edition = "2021"

[dependencies]
# HTTP client for API requests
reqwest = { version = "0.11", features = ["json", "blocking"] }
# JSON serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
# Perpetual futures exchange engine
perp-futures = { git = "https://github.com/EugenWay/perp-futures.git" }
# U256 for large numbers - must match perp-futures version
primitive-types = "0.14"
# HTTP server for HumanAgent API
tiny_http = "0.12"
# CLI argument parsing
clap = { version = "4.4", features = ["derive"] }
# Crossbeam channels for thread communication
crossbeam-channel = "0.5"
tungstenite = "0.28.0"
