[package]
name = "sim-engine"
version = "0.1.0"
edition = "2021"

[dependencies]
# HTTP client for API requests
reqwest = { version = "0.11", features = ["json", "blocking"] }
# JSON serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
# Perpetual futures exchange engine
perp-futures = { git = "https://github.com/EugenWay/perp-futures.git" }
# U256 for large numbers - must match perp-futures version
primitive-types = { version = "0.14", features = ["codec", "scale-info"] }
# HTTP server for HumanAgent API
tiny_http = "0.12"
# CLI argument parsing
clap = { version = "4.4", features = ["derive"] }
# Crossbeam channels for thread communication
crossbeam-channel = "0.5"
tungstenite = "0.28.0"
gclient = "1.10.0"
tokio = { version = "1", features = ["full"] }
hex = "0.4"
# SCALE codec for Sails encoding
parity-scale-codec = { version = "3.7", features = ["derive"] }
scale-info = { version = "2.11", features = ["derive"] }
# Blake2 for service/method hashing
blake2 = "0.10"
